	  succinct, testing for the absence of the "YES" response, rather
	  than for the various ways the user might cancel the dialog.

	* src/o_arc.c: Fix for drawing a dotted arc / circle with
	  angular dot spacing too small to render. Was a sign error
	  in the alternative codepath for drawing these cases.

2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

       * lib/system-gschemrc.in: Use PgUp & PgDn to change pages in gschem.

	 Applied patch from Peter Brett. Thanks!

	 Not only is it more intuitive to use the page keys to swap
	 between pages, but the current bindings ('<' & '>') don't
	 work on German keyboards.
	
       * src/x_fileselect.c:
	 Make "Save" the default response in the save page dialog.
	 FR #1704919. Thanks to rikster for reporting this FR.
	
       * src/x_dialog.c:
	 Make "Save changes" the default response in the close page
	 confirmation dialog.

       * src/o_picture.c, src/x_attribedit.c, src/x_autonumber.c,
	 src/x_compselect.c, src/x_dialog.c, src/x_fileselect.c,
	 src/x_image.c, src/x_log.c, src/x_multiattrib.c,
	 src/x_pagesel.c, src/x_print.c, src/x_script.c,
	 src/i_callbacks.c:

	 - Set the alternative button order for gtk dialogs 
	   (now with correct responses).
	   
	 - Reverted the changes below. 
	   gtk_dialog_set_alternative_button_order should have the same
	   responses as the dialogs.
	 
	 - Set the alternative button order for gtk dialogs.
	 This would allow to display the correct button order whatever
	 system is running this app. Fix for bug #1553483.

	* src/i_callbacks.c:
	  - Do nothing if the user deletes the page revert question dialog.
	
	  - Pop up a message if there is no component selected and the user
	  hits help->component documentation menu.
	
	* src/x_compselect.c: 
	  Make the component selector filter case insensitive.
	  Fixes bug #1673589. Thanks to Phil Endecott for reporting the
	  bug.
	
	* lib/system-gschemrc.in: Apply patch from Peter Brett. Thanks!